samples/_failures_safe/1761667264_107b05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c44efbe0.c: In function ‘main’:
./samples/SAFE/__tmp_c44efbe0.c:140:9: error: expected identifier or ‘(’ at end of input
  140 |         size_t
      |         ^~~~~~
./samples/SAFE/__tmp_c44efbe0.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c44efbe0.c:140:9: error: expected declaration or statement at end of input
